update Home Page

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,7 +1,15 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+}
+
+@font-face {
+  font-family: "Libre_Baskerville";
+  src: url('../src/font/LibreBaskerville-Bold.ttf') format('ttf'),
+    url('../src/font/LibreBaskerville-Bold.woff') format('woff'),
+     url()
+
 }
