--- a/Client/src/Pages/Home/WomanProductsSlider/style.css
+++ b/Client/src/Pages/Home/WomanProductsSlider/style.css
@@ -1,29 +1,20 @@
-.offerSlider {
+.catProductsSlider {
     width: 100%;
     height: 100%;
-    margin:auto 20px !important;
+    /* margin:auto 20px !important; */
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
   }
-  
-  /* .offerSlider .swiper-slide {
-    width: 300px;
-    height: 400px!important;
+  .catProductsSlider .swiper-slide{
     text-align: center;
-    font-size: 16px;
-    background: #fff;  
-    /* margin: 20px;   */
-  
-    /* Center slide text vertically */
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
+  font-size: 18px;
+  background: #fff;
+
+ 
   }
-   */
-  /* .swiper-slide img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-  }  */
+  /* .catProductsSlider .swiper-button-prev, .swiper-button-next{
+    margin: 0 10px;
+
+  } */
