--- a/Client/src/Pages/Home/TrendingItems/style.css
+++ b/Client/src/Pages/Home/TrendingItems/style.css
@@ -8,22 +8,9 @@
     gap: 20px;
   }
   
-  /* .offerSlider .swiper-slide {
-    width: 300px;
-    height: 400px!important;
-    text-align: center;
-    font-size: 16px;
-    background: #fff;  
-    /* margin: 20px;   */
-  
-    /* Center slide text vertically */
-    /* display: flex;
+  .offerSlider .swiper-slide{
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin:0px !important;
   }
-   */
-  /* .swiper-slide img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-  }  */
