--- a/Client/src/Pages/Home/TrendingOffer/style.css
+++ b/Client/src/Pages/Home/TrendingOffer/style.css
@@ -1,29 +1,17 @@
 .offerSlider {
     width: 100%;
     height: 100%;
-    margin:auto 20px !important;
+    /* margin:auto 20px !important; */
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
+    margin: 10px auto !important;
   }
-  
-  /* .offerSlider .swiper-slide {
-    width: 300px;
-    height: 400px!important;
-    text-align: center;
-    font-size: 16px;
-    background: #fff;  
-    /* margin: 20px;   */
-  
-    /* Center slide text vertically */
-    /* display: flex;
+  .offerSlider .swiper-slide{
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin:0px !important;
   }
-   */
-  /* .swiper-slide img {
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
-  }  */
+  
