--- a/Client/src/Pages/Home/WomanProductsSlider/style.css
+++ b/Client/src/Pages/Home/WomanProductsSlider/style.css
@@ -1,20 +1,23 @@
 .catProductsSlider {
-    width: 100%;
-    height: 100%;
-    /* margin:auto 20px !important; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-  }
-  .catProductsSlider .swiper-slide{
-    text-align: center;
+  width: 100%;
+  height: 100%;
+  /* margin:auto 20px !important; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.catProductsSlider .swiper-slide {
+  text-align: center;
   font-size: 18px;
   background: #fff;
+  width: 50% !important;
 
- 
-  }
-  /* .catProductsSlider .swiper-button-prev, .swiper-button-next{
+
+}
+
+/* .catProductsSlider .swiper-button-prev, .swiper-button-next{
     margin: 0 10px;
 
   } */
