--- a/Client/src/Pages/Home/TrendingOffer/style.css
+++ b/Client/src/Pages/Home/TrendingOffer/style.css
@@ -8,10 +8,10 @@
     gap: 20px;
     margin: 10px auto !important;
   }
-  .offerSlider .swiper-slide{
+  /* .offerSlider .swiper-slide{
     display: flex;
     justify-content: center;
     align-items: center;
     margin:0px !important;
-  }
+  } */
   
