--- a/Client/src/Pages/Home/WomanProductsSlider/style.css
+++ b/Client/src/Pages/Home/WomanProductsSlider/style.css
@@ -9,12 +9,13 @@
 }
 
 .catProductsSlider .swiper-slide {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:0px !important;
   font-size: 18px;
   background: #fff;
   width: 50% !important;
-
-
 }
 
 /* .catProductsSlider .swiper-button-prev, .swiper-button-next{
